﻿GNomEx Release Notes

5.2.6.2 (Aug 28, 2011)
----------------------
- Fashion Analysis filters after Experiment filters (my, my labs, other labs public, all).

5.2.6.1 (Aug 26, 2011)
----------------------
- Fix FDT downloads to handle large file selection and large file names by 
  caching file names using actionscript HTTPService rather that URL.
- Fix logic for parsing zip entry name and main folder name to account
  for symbolic links for experiment and analysis directories.  Reworked logic
  to handle different forms of symbolic links that don't necessarily match part of
  the experiment directory path.

5.2.6 (Aug 25, 2011)
-----------------------
- Add "Show all" checkbox to Analysis browse, and Experiment brows for non-admins.
- Limit analysis and experiment count to 2000 entries.  Warn when results truncated.
- Fixed bug causing billing statements to be sent incorrectly
- Fixed bug causing some experiments to not show up on Experiment list on Billing tab.

5.2.5 (Aug 24, 2011)
------------------------
- Allow samples with duplicate index tags to be combined into one multiplex group.  (Warn user, but permit it.)
- Show experiment type on QC worklist
- Fix bug that was causing delete analysis to fail due to foreign key constraint violation on transfer log table.
- Add "All" checkbox on Experiments view so that admins can view all experiments for all labs without any other filters.

5.2.4 (Aug 22, 2011)
------------------------
- Fix bug that was causing saves to fail on Edit Experiment view.  Bug introduced
  in last release (GNomEx 5.2.3) when code was changed to only check 'Show QC' on 
  internal experiments.
- Fixed experiment lookup to handle experiments with base number.  MySQL query using
  [0-9] changed to %.
- Allow lanes to be added, removed, copied on external experiments for admin,
  owner of experiment and lab manager.
- Show sample sequence lanes on Edit Detail for external sequencing experiments.
  

5.2.3 (Aug 20, 2011)