@@ -1,5 +1,9 @@
 ﻿GNomEx Release Notes
 
+----------------------
+- Changes to insure billing statement doesn't get sent again if a change is inadvertently made to an item on an invoice that has already been approved and sent.
+- Sample sheet upload process will now automatically create new sample rows there are not enough to accommodate all rows of the uploaded sample sheet.
+
 5.2.6.2 (Aug 28, 2011)
 ----------------------
 - Fashion Analysis filters after Experiment filters (my, my labs, other labs public, all).
